# CodeTheorie

./: .gitignore  CMakeLists.txt  README.md
data/: 01-OPGAVE-vigenerePlus.txt  EngimaTest.txt
src/: Adfgvx.cpp  Adfgvx.h  AlgorithmDecription.cpp  AlgorithmDecription.h  AlgorithmDecryption.cpp  AlgorithmDecryption.h  Enigma.cpp  Enigma.h  Playfair.cpp  Playfair.h  ViginerePlus.cpp  ViginerePlus.h  adfgvxTest.cpp  main.cpp
